# checkers_playdate

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: build_html.yml  build_mac.yml  build_playdate.yml  build_windows.yml
Source/: pdxinfo
Source/fonts/: font.fnt
assets/: checkers.xcf
metadata/appstream/: io.github.joyrider3774.checkers_playdate.metainfo.xml
metadata/desktopfile/: io.github.joyrider3774.checkers_playdate.desktop
metadata/flatpakrecipe/: io.github.joyrider3774.checkers_playdate.yml
metadata/rg35xxplusbatocera/: Checkers.sh
metadata/trimuismartpro/: config.json  launch.sh
src/: caudio.cpp  caudio.h  cbord.cpp  cbord.h  ccomputerai.cpp  ccomputerai.h  cinput.cpp  cinput.h  cmainmenu.cpp  cmainmenu.h  common.cpp  common.h  coptionmenu.cpp  coptionmenu.h  crank.cpp  crank.h  credits.cpp  credits.h  cselector.cpp  cselector.h  game.cpp  game.h  helperfuncs.cpp  helperfuncs.h  main.cpp  options.cpp  options.h  pd_helperfuncs.cpp  pd_helperfuncs.h  sdl_helpertypes.h  settings.cpp  settings.h  titlescreen.cpp  titlescreen.h
